- Added iso_checkout_order_conditions template
- Added productTree widget, similar to pageTree but for products/variants
- Added "tableless" option for checkout module (Ticket #325)
- Added: Copy child records (variants, languages) when copying a product
- Added: Allow foreignKey for variant attribute options
- Added: Show theme templates in product type select menu
- Improved: Better Isotope module handling, including callback support
- Improved: Moved multilingual support to its own extension "isotope_multilingual" with lot more options
- Improved: Hide payment information if checkout total is 0
- Improved: Authorize.net failed transaction response handling & log data
- Improved: Better usage of IsotopeBackend class
- Improved: Delay loading of subdivions against memory issues (Ticket #223)
- Improved: Updated ePay form payment to use a template
- Improved: Show customer address on ePay backend
- Improved: SQL key/index optimizations
- Improved number of SQL queries
- Improved: Better formatting to attributes list. Show attribute name in product type setup wizard.
- Improved: Show field label not value in quick edit mode
- Improved: Show "invisible" icon for products with start/stop date outside today
- Improved: More unique element IDs to load ajax into the right container (Ticket #291)
- Improved: Use <div> not <span> for attribute containers (Ticket #203)
- Improved: Only create cart in database if necessary (will save a lot of auto_increment IDs)
- Improved: Blair has rewritten Authorize.net's payment calls
- Improved: Related products & quick products now use the product tree and allow for variant selection
- Improved: All product collections can be printed to HTML/PDF
- Fixed start & stop publishing dates not working
- Fixed Authorize.net failed transaction bug
- Removed pre-0.1 update code from runonce.php

Version 0.2.7 (2011-03-??)
------------------------------
- Added support for language switching on checkout page (changelanguage extension)