@@ -50,7 +50,8 @@ CREATE TABLE `tl_module` (
   `iso_buttons` blob NULL,
   `iso_related_categories` blob NULL,
   `iso_noProducts` varchar(255) NOT NULL default '',
-  `iso_forceNoProducts` char(1) NOT NULL default '',
+  `iso_forceNoProducts` char(1) NOT NULL default '',  
+  `iso_includeMessages` char(1) NOT NULL default '',
 ) ENGINE=MyISAM DEFAULT CHARSET=utf8;
 
 
